fix: Scroll - Track alignment

--- a/src/components/Scroll/Scroll.styl
+++ b/src/components/Scroll/Scroll.styl
@@ -151,6 +151,9 @@ $barSizeXL = 14px
   height 32px
 
   &::before
+    left 0
+
+  &::before
   & .thumb
     bottom 0
 
@@ -172,6 +175,9 @@ $barSizeXL = 14px
 
 .bar.y
   width 32px
+
+  &::before
+    top 0
 
   &::before
   & .thumb
